src/css/resets.scss
@use "sass:color";

:root {
  --background: #ffffff;
  --foreground: #1e1e1e;
  --foretrans: #1e1e1e16;
  --col1: rgba(60, 160, 90, 1);
  --col2: rgba(160, 60, 60, 1);
  --col3: rgba(65, 60, 160, 1);
  --type-title: "Rubik", Arial, Helvetica, sans-serif;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #1e1e1e;
    --foreground: #ededed;
    --foretrans: #ffffff16;
    --col1: rgba(120, 220, 180, 1);
    --col2: rgba(220, 180, 120, 1);
    --col3: rgba(130, 180, 230, 1);
  }
}

html,
body {
  margin: 0;
  font-size: var(--fontsize);
  line-height: var(--lineheight);
}

body {
  color: var(--foreground);

  background:
    linear-gradient(
      to bottom,
      var(--background) 0,
      var(--background) calc(var(--baseline) - 1px),
      var(--foretrans) calc(var(--baseline) - 1px),
      var(--foretrans) var(--baseline)
    ),
    var(--background);
  background-size: 100% var(--baseline);
  background-position: 0 0;

  padding-top: var(--baseline);

  font-family: var(--type-title);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

